--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,9 @@ django = "^5.0.4"
 pre-commit = "^3.7.0"
 django-ninja = "^1.1.0"
 django-environ = "^0.11.2"
-psycopg2 = "^2.9.9"
+psycopg2-binary = "^2.9.9"
+whitenoise = {extras = ["brotli"], version = "^6.6.0"}
+uvicorn = "^0.29.0"
 
 
 [build-system]
