--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ django-environ = "^0.11.2"
 psycopg2-binary = "^2.9.9"
 whitenoise = {extras = ["brotli"], version = "^6.6.0"}
 uvicorn = "^0.29.0"
+gunicorn = "^22.0.0"
 
 
 [build-system]
