--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
       name: capricci-backend
       runtime: python
       buildCommand: "./build.sh"
-      startCommand: "python -m gunicorn mysite.asgi:application -k uvicorn.workers.UvicornWorker"
+      startCommand: "python -m gunicorn config.asgi:application -k uvicorn.workers.UvicornWorker"
       envVars:
           - key: SECRET_KEY
             generateValue: true
