--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,9 @@ select = [
 ignore = []
 fixable = ["ALL"]
 
+[tool.ruff.lint.per-file-ignores]
+"__init__.py" = ["F401"]
+
 [tool.ruff.format]
 quote-style = "double"
 indent-style = "space"
