--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ psycopg2-binary = "^2.9.9"
 whitenoise = {extras = ["brotli"], version = "^6.6.0"}
 uvicorn = "^0.29.0"
 gunicorn = "^22.0.0"
+pillow = "^10.3.0"
 
 
 [build-system]
@@ -57,6 +58,7 @@ select = [
   ]
 ignore = []
 fixable = ["ALL"]
+exclude = ["*/migrations/*"]
 
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
@@ -66,3 +68,4 @@ quote-style = "double"
 indent-style = "space"
 skip-magic-trailing-comma = false
 line-ending = "auto"
+exclude = ["*/migrations/*"]
