--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ whitenoise = {extras = ["brotli"], version = "^6.6.0"}
 uvicorn = "^0.29.0"
 gunicorn = "^22.0.0"
 pillow = "^10.3.0"
+django-ninja-extra = "^0.20.5"
+ninja-schema = "^0.13.6"
 
 
 [build-system]
