--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,3 +19,12 @@ repos:
             args: [--fix]
           # Run the formatter.
           - id: ruff-format
+
+    - repo: local
+      hooks:
+        - id: check-django-migrations
+          name: Check Django migrations
+          entry: python manage.py makemigrations --check
+          language: system
+          types: [ python ]
+          pass_filenames: false
