--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ django-storages = "^1.14.2"
 boto3 = "^1.34.93"
 faker = "^24.14.1"
 randimage = "^1.2"
+django-cors-headers = "^4.3.1"
 
 
 [build-system]
