--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,12 +17,12 @@ uvicorn = "^0.29.0"
 gunicorn = "^22.0.0"
 pillow = "^10.3.0"
 django-ninja-extra = "^0.20.5"
-ninja-schema = "^0.13.6"
 django-storages = "^1.14.2"
 boto3 = "^1.34.93"
 faker = "^24.14.1"
 randimage = "^1.2"
 django-cors-headers = "^4.3.1"
+django-ninja-jwt = "^5.3.1"
 
 
 [build-system]
